// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/LogFace extended filters work correctly for Nutrition: Export button 1`] = `
<a
  download={true}
  href="http://example.com/superset/explore_json/?form_data={\\"slice_id\\":nutritionLogface}&csv=true"
  id="export-button"
>
  Export data
</a>
`;

exports[`containers/LogFace extended filters work correctly for Nutrition: risk filter 1`] = `
<select
  data-testid="select"
  onChange={[Function]}
>
  <option
    key="stunting"
    value="stunting"
  >
    Stunting
  </option>
  <option
    key="wasting"
    value="wasting"
  >
    Wasting
  </option>
  <option
    key="overweight"
    value="overweight"
  >
    Overweight
  </option>
  <option
    key="inappropriateFeeding"
    value="inappropriateFeeding"
  >
    Inappropriate Feeding
  </option>
  <option
    key="underweight"
    value="underweight"
  >
    Underweight
  </option>
  <option
    key="normal"
    value="normal"
  >
    Normal
  </option>
</select>
`;

exports[`containers/LogFace extended filters work correctly for pregnancy: location filter 1`] = `
<select
  data-testid="select"
  onChange={[Function]}
>
  <option
    key="c8054fa5-2d63-4cb5-bc52-173a4eb367fd"
    value="c8054fa5-2d63-4cb5-bc52-173a4eb367fd"
  >
    Gia Lai
  </option>
  <option
    key="1b8b7a76-15e1-446b-9d1e-c8cc97777a28"
    value="1b8b7a76-15e1-446b-9d1e-c8cc97777a28"
  >
    Điện Biên
  </option>
  <option
    key="eccfe905-0e03-4188-98bc-22f141cccd0e"
    value="eccfe905-0e03-4188-98bc-22f141cccd0e"
  >
    Kon Tum
  </option>
</select>
`;

exports[`containers/LogFace extended filters work correctly for pregnancy: risk filter 1`] = `
<select
  data-testid="select"
  onChange={[Function]}
>
  <option
    key="risk"
    value="risk"
  >
    Risk
  </option>
  <option
    key="redAlert"
    value="redAlert"
  >
    Red alert
  </option>
  <option
    key="noRisk"
    value="noRisk"
  >
    No risk
  </option>
</select>
`;

exports[`containers/LogFace extended renders correctly: Export button 1`] = `
<a
  download={true}
  href="http://example.com/superset/explore_json/?form_data={\\"slice_id\\":pregnancyLogface}&csv=true"
  id="export-button"
>
  Export data
</a>
`;

exports[`containers/LogFace extended renders correctly: logface title 1`] = `
<h2
  id="logface_title"
>
  Log Face - Pregnancy
</h2>
`;

exports[`containers/LogFace extended renders correctly: search div 1`] = `
<input
  className="form-control logface-search"
  id="search"
  name="input"
  onChange={[Function]}
  placeholder="Search ID, Reporter, Patients"
  type="text"
/>
`;

exports[`containers/LogFace extended renders correctly: table tr 1`] = `"Event DateLocationSMS TypeReporterPatientAgeMessageRisk Level"`;

exports[`containers/LogFace extended renders correctly: table tr 2`] = `"13/06/2021Update Pregnancy DetectionHusna Hariz101EL445 yearsName : SELANI   TANIPhone Number : 0778910121Health Insurance : 0083415011"`;

exports[`containers/LogFace extended renders correctly: table tr 3`] = `"13/06/2021Pregnancy DetectionHusna Hariz101EL445 yearsName : SELANI   TANIPhone Number : 0778910121Health Insurance : KCO"`;

exports[`containers/LogFace extended renders correctly: table tr 4`] = `"11/06/2021Update Pregnancy DetectionHusna Hariz101EK647 yearsName : LETOYA   AMANIPhone Number : 0771110121Health Insurance : 0083415045"`;

exports[`containers/LogFace extended renders correctly: table tr 5`] = `"11/06/2021Pregnancy RegistrationHusna Hariz101EK647 yearsEDD : 27/07/2021Gravidity : 2Parity : 1Weight : 58kgHeight : 170cmBMI : Previous Gynaecology History : DiabetesCurrent Symptoms : DiarrheaRisk"`;

exports[`containers/LogFace extended renders correctly: table tr 6`] = `"11/06/2021Pregnancy DetectionHusna Hariz101EK647 yearsName : LETOYA   AMANIPhone Number : 0771110121Health Insurance : KCO"`;

exports[`containers/LogFace extended sms type filter work correctly: Export button 1`] = `
<a
  download={true}
  href="http://example.com/superset/explore_json/?form_data={\\"slice_id\\":nbcPncLogFace}&csv=true"
  id="export-button"
>
  Export data
</a>
`;
